spade-tests/src/snapshots/spade_tests__integration__trait_tests__impl_of_tuple_is_error.snap
---
source: spade-tests/src/integration.rs
---
struct T {}

impl (bool, bool) for T {}


error: Unexpected `(`, expected `Identifier`
  ┌─ testinput:3:6
  │
3 │ impl (bool, bool) for T {}
  │      ^ expected `Identifier`
